k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: climbcommunity-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: climbcommunity-backend
  template:
    metadata:
      labels:
        app: climbcommunity-backend
    spec:
      containers:
        - name: climbcommunity-backend
          image: yangheeseok/climbcommunity-backend:latest
          ports:
            - containerPort: 8080
