k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: climbcommunity-backend-service
spec:
  type: ClusterIP
  selector:
    app: climbcommunity-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
