k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: climbcommunity-frontend-service
spec:
  type: ClusterIP
  selector:
    app: climbcommunity-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
