k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: climbcommunity-mysql-service
spec:
  type: ClusterIP
  selector:
    app: climbcommunity-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
