k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: climbcommunity-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: climbcommunity.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: climbcommunity-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: climbcommunity-backend-service
                port:
                  number: 8080
